--- a/xpi/content/css/linux/invicons_navbarextra.css
+++ b/xpi/content/css/linux/invicons_navbarextra.css
@@ -3,21 +3,21 @@
 @-moz-document url(chrome://browser/content/browser.xul) {
 	
 	#nav-bar :-moz-any(#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_bookmarks-menu-toolbar-button,#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_go-button) .toolbarbutton-icon,
-	#nav-bar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button:not([starred]), #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #ctraddon_preferences-button, #privatebrowsing-button, #save-page-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #web-apps-button),
+	#nav-bar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button:not([starred]), #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #ctraddon_preferences-button, #privatebrowsing-button, #save-page-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #web-apps-button,#webide-button,#containers-panelmenu),
 	#nav-bar #panic-button:not([open]),
 	#nav-bar #pocket-button:not([open]),
 	#nav-bar #bookmarks-menu-button > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
-	  list-style-image: url(chrome://browser/skin/Toolbar-inverted.png) !important;
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/Toolbar-inverted.png) !important;
 	}
 	#nav-bar #sync-button[status="active"],
 	#nav-bar #sync-button[status="active"]:hover:active:not([disabled="true"]) {
 	  list-style-image: url("chrome://browser/skin/syncProgress-toolbar-inverted.png") !important;
 	}
 	#nav-bar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon {
-	  background: -moz-image-rect(url("chrome://browser/skin/Toolbar-inverted.png"), 0, 198, 18, 180) center no-repeat !important;
+	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/Toolbar-inverted.png"), 0, 198, 18, 180) center no-repeat !important;
 	}
 	#nav-bar #downloads-button:not([counter]):not([attention]) > #downloads-indicator-anchor > #downloads-button-progress-area > #downloads-indicator-counter {
-	  background-image: -moz-image-rect(url("chrome://browser/skin/Toolbar-inverted.png"), 0, 198, 18, 180) !important;
+	  background-image: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/Toolbar-inverted.png"), 0, 198, 18, 180) !important;
 	}
 	#nav-bar .toolbarbutton-1 > .toolbarbutton-menu-dropmarker,
 	#nav-bar .toolbarbutton-1 > .toolbarbutton-menubutton-dropmarker {
@@ -62,6 +62,155 @@
 	}
 	#main-window[fx46plus="true"] #nav-bar #pocket-button:not([open]) {
 	  -moz-image-region: rect(0, 774px, 18px, 756px) !important;
+	}
+	
+	/* Fx55+ */
+	#main-window[fx55plus="true"] #nav-bar #back-button {
+	  -moz-image-region: rect(0, 36px, 18px, 18px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #forward-button {
+	  -moz-image-region: rect(0, 72px, 18px, 54px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #home-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 126px, 18px, 108px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #bookmarks-menu-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 144px, 18px, 126px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #bookmarks-menu-button[cui-areatype="toolbar"][starred] {
+	  -moz-image-region: rect(0, 162px, 18px, 144px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #bookmarks-menu-button[cui-areatype="toolbar"] > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
+	  -moz-image-region: rect(0, 630px, 18px, 612px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #history-panelmenu[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 180px, 18px, 162px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #downloads-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 198px, 18px, 180px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #add-ons-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 216px, 18px, 198px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #open-file-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 234px, 18px, 216px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #save-page-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 252px, 18px, 234px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #sync-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 792px, 18px, 774px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #containers-panelmenu[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 810px, 18px, 792px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #feed-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 288px, 18px, 270px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #social-share-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0px, 306px, 18px, 288px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #characterencoding-button[cui-areatype="toolbar"]{
+	  -moz-image-region: rect(0, 324px, 18px, 306px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #new-window-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 342px, 18px, 324px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #e10s-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 342px, 18px, 324px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #new-tab-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 360px, 18px, 342px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #privatebrowsing-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 378px, 18px, 360px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #find-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 396px, 18px, 378px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #print-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 414px, 18px, 396px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #fullscreen-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 432px, 18px, 414px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #developer-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 450px, 18px, 432px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #preferences-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 468px, 18px, 450px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #PanelUI-menu-button {
+	  -moz-image-region: rect(0, 486px, 18px, 468px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #edit-controls:not(:-moz-any(:not([cui-areatype="toolbar"]), [overflowedItem=true])) > #cut-button {
+	  -moz-image-region: rect(0, 504px, 18px, 486px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #edit-controls:not(:-moz-any(:not([cui-areatype="toolbar"]), [overflowedItem=true])) > #copy-button {
+	  -moz-image-region: rect(0, 522px, 18px, 504px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #edit-controls:not(:-moz-any(:not([cui-areatype="toolbar"]), [overflowedItem=true])) > #paste-button {
+	  -moz-image-region: rect(0, 540px, 18px, 522px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #zoom-controls:not(:-moz-any(:not([cui-areatype="toolbar"]), [overflowedItem=true])) > #zoom-out-button {
+	  -moz-image-region: rect(0, 558px, 18px, 540px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #zoom-controls:not(:-moz-any(:not([cui-areatype="toolbar"]), [overflowedItem=true])) > #zoom-in-button {
+	  -moz-image-region: rect(0, 576px, 18px, 558px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #nav-bar-overflow-button {
+	  -moz-image-region: rect(0, 612px, 18px, 594px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #email-link-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 666px, 18px, 648px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #sidebar-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 684px, 18px, 666px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #panic-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 702px, 18px, 684px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #panic-button[cui-areatype="toolbar"][open] {
+	  -moz-image-region: rect(18px, 702px, 36px, 684px) !important;
+	}
+
+	#main-window[fx55plus="true"] #nav-bar #webide-button[cui-areatype="toolbar"] {
+	  -moz-image-region: rect(0, 738px, 18px, 720px) !important;
 	}
 
 }
