--- a/xpi/content/css/linux/overlayextra.css
+++ b/xpi/content/css/linux/overlayextra.css
@@ -40,6 +40,14 @@
 	#main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button):-moz-lwtheme-brighttext {
 	  list-style-image: url("chrome://browser/skin/Toolbar-inverted.png");
 	}
+
+	#main-window[defaultfxtheme="true"][fx55plus="true"] :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button) {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar.png");
+	}
+	
+	#main-window[defaultfxtheme="true"][fx55plus="true"] :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button):-moz-lwtheme-brighttext {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar-inverted.png");
+	}
 	
 	#main-window[defaultfxtheme="true"] #ctraddon_history-menu-toolbar-button,
 	#main-window[defaultfxtheme="true"] #ctraddon_history-button {
@@ -70,7 +78,15 @@
 	}
 
 	toolbar[brighttext] #ctraddon_preferences-button {
-	  list-style-image: url(chrome://browser/skin/Toolbar-inverted.png);
+	  list-style-image: url("chrome://browser/skin/Toolbar-inverted.png");
+	}
+	
+	#main-window[fx55plus="true"] #ctraddon_preferences-button {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar.png");
+	}
+
+	#main-window[fx55plus="true"] toolbar[brighttext] #ctraddon_preferences-button {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar-inverted.png");
 	}
 
 	#ctraddon_preferences-button[cui-areatype="toolbar"] {
