--- a/xpi/content/css/alt_appbutton_icons7.css
+++ b/xpi/content/css/alt_appbutton_icons7.css
@@ -6,4 +6,8 @@
 	  list-style-image: url("chrome://browser/skin/Toolbar.png") !important;
 	  -moz-image-region: rect(0px, 486px, 18px, 468px) !important;
 	}
+	#main-window[fx55plus="true"] #ctraddon_appbutton > .toolbarbutton-icon {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar.png") !important;
+	  -moz-image-region: rect(0px, 486px, 18px, 468px) !important;
+	}
 }
