--- a/xpi/content/css/alt_optionswindow.css
+++ b/xpi/content/css/alt_optionswindow.css
@@ -14,6 +14,7 @@
       margin-bottom: 30px !important;
 	}
 	
+	.help-button,
 	.category[hidden="true"],
 	#mainPrefPane .header {
 	  display: none !important;
