--- a/xpi/content/css/mac/empty_favicon_g0.css
+++ b/xpi/content/css/mac/empty_favicon_g0.css
@@ -122,8 +122,13 @@
 	-moz-image-region: rect(0px, 16px, 16px, 0px) !important;
   }
 
-  treechildren::-moz-tree-image(title, query, OrganizerQuery_History) {
+   treechildren::-moz-tree-image(title, query, OrganizerQuery_History) {
 	list-style-image: url("chrome://browser/skin/Toolbar.png") !important;
+	-moz-image-region: rect(0, 180px, 18px, 162px) !important;
+  }
+  
+  #main-window[fx55plus="true"] treechildren::-moz-tree-image(title, query, OrganizerQuery_History) {
+	list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar.png") !important;
 	-moz-image-region: rect(0, 180px, 18px, 162px) !important;
   }
 
