--- a/xpi/content/css/mac/overlayextra.css
+++ b/xpi/content/css/mac/overlayextra.css
@@ -76,12 +76,21 @@
 	
 	/* for Retina display */
 	@media (min-resolution: 2dppx) {
-	  #main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button, #ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button,#ctraddon_go-button)  {
-		list-style-image: url("chrome://browser/skin/Toolbar@2x.png") !important;
-	  }
-	  #main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button, #ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button,#ctraddon_go-button):-moz-lwtheme-brighttext   {
-		list-style-image: url("chrome://browser/skin/Toolbar-inverted@2x.png") !important;
-	  }
+		#main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button) {
+		  list-style-image: url("chrome://browser/skin/Toolbar@2x.png");
+		}
+		
+		#main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button):-moz-lwtheme-brighttext {
+		  list-style-image: url("chrome://browser/skin/Toolbar-inverted@2x.png");
+		}
+		
+		#main-window[defaultfxtheme="true"][fx55plus="true"]  :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button) {
+		  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar@2x.png");
+		}
+		
+		#main-window[defaultfxtheme="true"][fx55plus="true"]  :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button):-moz-lwtheme-brighttext {
+		  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar-inverted@2x.png");
+		}
 	  
 	  #main-window[defaultfxtheme="true"] #ctraddon_back-button {
 		-moz-image-region: rect(0, 108px, 36px, 72px) !important;
@@ -152,13 +161,20 @@
 	}
 	
 	/* prefwindow button clone */
-	
 	#ctraddon_preferences-button {
 	  list-style-image: url("chrome://browser/skin/Toolbar.png");
 	}
 
 	toolbar[brighttext] #ctraddon_preferences-button {
-	  list-style-image: url(chrome://browser/skin/Toolbar-inverted.png);
+	  list-style-image: url("chrome://browser/skin/Toolbar-inverted.png");
+	}
+	
+	#main-window[fx55plus="true"] #ctraddon_preferences-button {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar.png");
+	}
+
+	#main-window[fx55plus="true"] toolbar[brighttext] #ctraddon_preferences-button {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar-inverted.png");
 	}
 
 	#ctraddon_preferences-button[cui-areatype="toolbar"] {
@@ -172,6 +188,14 @@
 
 	  toolbar[brighttext] #ctraddon_preferences-button {
 		list-style-image: url("chrome://browser/skin/Toolbar-inverted@2x.png");
+	  }
+	  
+	  #main-window[fx55plus="true"] #ctraddon_preferences-button {
+		list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar@2x.png");
+	  }
+
+	  #main-window[fx55plus="true"] toolbar[brighttext] #ctraddon_preferences-button {
+		list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar-inverted@2x.png");
 	  }
 	  #ctraddon_preferences-button[cui-areatype="toolbar"] {
 		-moz-image-region: rect(0, 936px, 36px, 900px);
