--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -241,13 +241,13 @@ radio.ctraddontab .radio-check-box1 {
   margin-right: 0;
 }
 #ctraddon_altabico_white_pm{
-  list-style-image: url("chrome://browser/skin/Toolbar-inverted.png");
+  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar-inverted.png");
   -moz-image-region: rect(0px, 486px, 18px, 468px);
   margin-left: 0;
   margin-right: 0;
 }
 #ctraddon_altabico_dark_pm{
-  list-style-image: url("chrome://browser/skin/Toolbar.png");
+  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar.png");
   -moz-image-region: rect(0px, 486px, 18px, 468px);
   margin-left: 0;
   margin-right: 0;
@@ -296,6 +296,10 @@ radio.ctraddontab .radio-check-box1 {
   list-style-image:url('chrome://classic_theme_restorer/content/images/close_w10red.png');
   -moz-image-region: rect(0px, 20px, 20px, 0px);
 }
+#ctraddon_closeicon_w10red2, #ctraddon_closeicong_w10red2 {
+  list-style-image:url('chrome://classic_theme_restorer/content/images/close_w10red2.png');
+  -moz-image-region: rect(0px, 20px, 20px, 0px);
+}
 #ctraddon_closeicon_gc, #ctraddon_closeicong_gc{
   list-style-image:url('chrome://classic_theme_restorer/content/images/close_gc.png');
   -moz-image-region: rect(0px, 16px, 16px, 0px);
@@ -317,12 +321,14 @@ radio.ctraddontab .radio-check-box1 {
 }
 #ctraddon_closeicon_w10:hover, #ctraddon_closeicong_w10:hover,
 #ctraddon_closeicon_w10i:hover, #ctraddon_closeicong_w10i:hover,
-#ctraddon_closeicon_w10red:hover, #ctraddon_closeicong_w10red:hover {
+#ctraddon_closeicon_w10red:hover, #ctraddon_closeicong_w10red:hover,
+#ctraddon_closeicon_w10red2:hover, #ctraddon_closeicong_w10red2:hover {
   -moz-image-region: rect(0px, 40px, 20px, 20px);
 }
 #ctraddon_closeicon_w10:active, #ctraddon_closeicong_w10:active,
 #ctraddon_closeicon_w10i:active, #ctraddon_closeicong_w10i:active,
-#ctraddon_closeicon_w10red:active, #ctraddon_closeicong_w10red:active {
+#ctraddon_closeicon_w10red:active, #ctraddon_closeicong_w10red:active,
+#ctraddon_closeicon_w10red2:active, #ctraddon_closeicong_w10red2:active {
   -moz-image-region: rect(0px, 60px, 20px, 40px);
 }
 
